Removed aws credential directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,10 +47,8 @@ x-airflow-common:
     AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
-    AIRFLOW_CONN_AWS_DEFAULT: aws://?profile=airflow-spark1&s3_config_file=/opt/airflow/creds/s3&s3_config_format=aws
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
   volumes:
-    - ./airflow-data/creds:/opt/airflow/creds
     - ./dags:/opt/airflow/dags
     - input_folder:/opt/airflow/input_folder
     - output_folder:/opt/airflow/output_folder
